[package]
name = "zlnk"
version = "0.4.5"
authors = ["Jonas Kuche <Jonas.kuche@gmail.com>"]

[dependencies]
rocket = "0.3.8"
rocket_codegen = "0.3.8"
redis = "0.8.0"
r2d2 = "0.8.2"
r2d2_redis = "0.7.0"
dotenv = "0.11.0"
regex = "0.2.10"
rand = "0.4.2"
url = "1.7.0"
woothee = "0.8.0"
maxminddb = "0.9.0"
serde_json = "1.0.16"

